force-app/main/default/objects/Energy_Use_Fuel_Type__mdt/Energy_Use_Fuel_Type__mdt.object-meta.xml
<CustomObject>
    <description>HT: Created for NZC Implementation, UC003_US02, UC003_US12, UC003_US15, created to store the fuel types which are visible on the Energy Use creation form for Data Processors.</description>
    <label>Energy Use Fuel Type</label>
    <pluralLabel>Energy Use Fuel Types</pluralLabel>
</CustomObject>