force-app/main/default/objects/Energy_Use_Fuel_Type__mdt/fields/Applicability_Picklist_Label__c.field-meta.xml
<CustomField>
    <fullName>Applicability_Picklist_Label__c</fullName>
    <label>Applicability Picklist Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>