force-app/main/default/objects/Energy_Use_Fuel_Type__mdt/fields/Applicability_Values__c.field-meta.xml
<CustomField>
    <fullName>Applicability_Values__c</fullName>
    <label>Applicability Values</label>
    <type>TextArea</type>
</CustomField>