force-app/main/default/objects/Energy_Use_Fuel_Type__mdt/fields/Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type__c</fullName>
    <label>Fuel Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>