force-app/main/default/objects/Energy_Use_Fuel_Type__mdt/fields/isSectionOpen__c.field-meta.xml
<CustomField>
    <fullName>isSectionOpen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSectionOpen</label>
    <type>Checkbox</type>
</CustomField>