force-app/main/default/objects/Energy_Use_Fuel_Type__mdt/fields/Refrigerant_Emissions_Factor__c.field-meta.xml
<CustomField>
    <fullName>Refrigerant_Emissions_Factor__c</fullName>
    <label>Refrigerant Emissions Factor</label>
    <length>200</length>
    <type>Text</type>
</CustomField>