force-app/main/default/objects/Energy_Use_Fuel_Type__mdt/fields/Renewable_Energy_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewable_Energy_Type__c</fullName>
    <label>Renewable Energy Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>