force-app/main/default/objects/Energy_Use_Fuel_Type__mdt/fields/Scope_Number__c.field-meta.xml
<CustomField>
    <fullName>Scope_Number__c</fullName>
    <label>Scope Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>