force-app/main/default/objects/Energy_Use_Fuel_Type__mdt/fields/Show_for_ULA__c.field-meta.xml
<CustomField>
    <fullName>Show_for_ULA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Harshvardhan: Created this checkbox field for the ULA requirement. If this field is true, then the corresponding metadata record(Fuel Type) will be shown on the Data Entry form as part of ULA.</description>
    <label>Show for ULA</label>
    <type>Checkbox</type>
</CustomField>