force-app/main/default/objects/Energy_Use_Fuel_Type__mdt/fields/Show_Not_Applicable_For_Renewable__c.field-meta.xml
<CustomField>
    <fullName>Show_Not_Applicable_For_Renewable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Not Applicable For Renewable</label>
    <type>Checkbox</type>
</CustomField>