force-app/main/default/objects/Energy_Use_Fuel_Type__mdt/fields/UOM_Options__c.field-meta.xml
<CustomField>
    <fullName>UOM_Options__c</fullName>
    <label>UOM Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>